app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll automatically include all the stylesheets available in this directory
 * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
 * the top of the compiled file, but it's generally better to create a new file per style scope.
 *= require_self
 */

 @import "bourbon";

body {
  background: #F6F6F6 url("/assets/pattern.png") repeat;
  font: 14px/1.4 "myriad pro",sans-serif;

  margin: 0;
  padding: 0;
}

a img {
  border: none;
}

a { color: #333; }
a:hover { color: #666; }

.clear {
  clear: both;
  height: 0;
  overflow: hidden;
}

h1 {
  font: bold 2.45em "ff-meta-web-pro",sans-serif;
}

h1, h2, h3 {
  margin: 18px 0 6px 0;
  display: block;
  color: #262626;
  font-family: "ff-meta-web-pro",sans-serif;
  font-size: 32px;
}

h2 {
  font-size: 24px;
  font-weight: bold;
  margin-top: 14px;
}

h3 { font-size: 20px; }

p {
  margin: 0 0 10px;
}

.btn { font-family: helvetica, arial, sans-serif;}

#wrapper {
  width: 1020px;
  background: url("/assets/wrapper-bg.png") repeat-y;
  margin: 0 auto;

  #wrapper-content {
    width: 940px;
    min-height: 900px;
    margin: 0 auto;
    padding: 0;
    overflow: hidden;
    background: url("/assets/body-splitter.gif") repeat-y 610px 0;
  }
}

#wrapper-footer {
  padding: 0 40px;
  clear: both;
  .footer {
    padding: 15px 0 10px;
    border-top: 1px solid #eee;
    text-align: center;
    color: #999;
  }
}

h2.arrowed, h3.arrowed {
  clear: both;
  font-family: "bebas-neue",sans-serif;
  color: #333;
  background: url("/assets/heading-box.png") no-repeat -12px 0;
  font-size: 26px;
  margin-bottom: 25px;
  text-shadow: 1px 1px 1px white;
  height: 51px;
  padding: 0 0 0 10px;
  line-height: 45px;
  a { color: #333; }
  .arrows {
    color: #167ECE;
    font-size: 37px;
    font-family: Arial, sans-serif;
    padding-left: 3px;
  }

  &.facebook-header {
    margin-bottom: 10px !important;
  }

}

#left-wrap {
  float: left;
  width: 630px;
  #left-column {
    width: 600px;
    padding-left: 10px;
    padding-right: 20px;
  }

}


#sidebar {
  float: left;
  width: 310px;
  padding: 0px;
  position: relative;
  left: -1px;

  #separator {
    position: absolute;
    width: 1px;
    height: 49px;
    background: #ccc;
    left: -1px;
    top: 2px;
  }

  h2.arrowed, h3.arrowed {
    background: url("/assets/heading-box.png") no-repeat -12px 0;
    font-size: 26px;
    margin-bottom: 25px;
    text-shadow: 1px 1px 1px white;
    height: 51px;
    padding-left: 20px;
    line-height: 45px;
    color: #333;
    &.nomargin { margin-bottom: 0; }
    .arrows {
      color: #167ECE;
      font-size: 37px;
      font-family: Arial, sans-serif;
      padding-left: 3px;
    }
  }

  .content {
    padding: 0 20px;
  }

  .paypal-donate {
    margin: 5px 0 10px 10px;
  }
}

.coach {
  background: #fafafa;
  border-left: 1px solid #dedede;
  border-bottom: 1px solid #dedede;
  display: block;
  width: 134px;
  height: 45px;
  padding: 10px 4px 0 15px;
  float: left;

  @include transition (background 1.0s ease-in-out);

  &:nth-child(odd) { border-left: none; width: 137px; }
  &:hover {
    background: #efefef;
  }

  a {
    text-decoration: none;
    color: #333;
  }
  .name {
    font-size: 14px;
    font-weight: normal;
    padding: 0 0 2px 4px;
  }

  .tags {
    a {
      color: #999;
      background: none;
    }
  }
}

.tags {
  margin: 0;
  padding: 0;
  list-style: none;
  li, a {
    float: left;
    height: 20px;
    line-height: 20px;
    position: relative;
    font-size: 11px;
  }
  a {
    margin-right: 5px;
    padding: 0 4px;
    background: #0089e0;
    color: #fff;
    text-decoration: none !important;
    /* TODO - does bootstrap has anything to improve this? */
    @include border-radius(4px);
    /* TODO - use myriad here too? */
    font-family: helvetica, arial, sans-serif;
    line-height: 2;
    @include transition (background 1.0s ease-in-out);

  }
  a:hover {
    background: #555;
    color: #fff;
  }
}

#header {
  position: relative;
  #donate {
    position: absolute;
    right: 330px;
    top: 80px;
  }
  h1 {
    padding-top: 25px;
  }
  #upcoming {
    position: absolute;
    right: 0;
    top: 0;
    display: block;
    width: 270px;
    height: 110px;
    padding: 0 20px;

    .upcoming {
      margin: 15px;
      &:first-child { margin-bottom: 15px; }
      a { text-decoration: none; }
      h2, p { margin: 0; padding: 0; }
      h2 {
        margin: 0;
        font-size: 18px;
        line-height: 1;
      }
      p {
        font-size: 14px;
        line-height: 1;
      }

    }
  }
}

ul.bloglinks {
  padding: 0;
  margin: 0;
  li {
    padding-left: 10px;
    border-bottom: 1px solid #ddd;
    display: block;
    a {
      color: #333;
      display: block;
      padding: 10px;
      text-decoration: none;
      &:hover { background: #fbfbfb; }
    }
  }
}

.nav.nav-tabs { margin-bottom: 0; }

.advertise a {
  margin: -6px 0 11px 88px;
}

.submenu-arrow {
  display: inline-block;
  width: 0;
  height: 0;
  text-indent: -99999px;
  vertical-align: baseline;
  border-bottom: 4px solid transparent;
  border-left: 4px solid black;
  border-top: 4px solid transparent;
  opacity: 0.3;
  filter: alpha(opacity=30);
  border-rigth: 4px solid transparent;
  float: right;
  position: relative;
  top: 3px;
}

li.stream {
  margin-right: 35px;
}

.field_with_errors {
  display: inline;
  input, textarea { color: #B94A48; border-color: #B94A48; }

  input:focus, textarea:focus {
    border-color: #953b39;
    -webkit-box-shadow: 0 0 6px #d59392;
    -moz-box-shadow: 0 0 6px #d59392;
    box-shadow: 0 0 6px #d59392;
  }
}

.help-inline { color: #999; }

#left-wrap form.well { width: 570px; }
button.btn, a.btn {
  vertical-align: top;
  margin-right: 3px;
}

.people { margin: 0 0 20px 0; }

.staff {
  clear: both;
  padding: 10px;
  background: rgba(#000, 0.05);

  img {
    float: left;
    box-shadow: 0 0 3px #000;
    -webkit-box-shadow: 0 0 3px #000;
    margin: 0 20px 0 0;
  }
  .info {
    padding-top: 5px;
  }
}

.staff:nth-child(even) {
  background: white;
  img {
    float: right;
    margin: 0 0 0 20px;
  }
  text-align: right;
}

.add-on + .help-inline {
  margin: 6px 0 0 0;
}

.btn { margin-left: 3px; }

.form-inline {
  margin-bottom: 15px;
}

#adbtn {
  position: absolute;
  top: 70px;
  right: 320px;
}

.pick-race, .pick-server {
  float: left;
  margin-right: 5px;
}

.practice-submit {
  position: relative;
  top: 34px;
  left: 81px;
  z-index: 100;
}

.pick-league {
  margin-top: 6px;
}


@import "bootstrap";
@import "posts";
@import "progress_bar";
@import "users";
@import "dashboard";
@import "pagination";
@import "jquery-ui.custom";

